public enum TipoDato
{
    STRING, VOID,INT,DOUBLE,CHAR
}