public  class Variable extends Id{

    public Variable(String NombrVariable, TipoDato tipo){
        super(NombrVariable,tipo);
    }
}